dotnet-developerdays/2019-docker-kubernetes-dotnet-devs/k8s/03-signup/message-queue.yml
apiVersion: v1
kind: Service
metadata:
  name: message-queue
spec:
  selector:    
    app: signup
    component: message-queue
  ports:
  - name: nats
    port: 4222
    targetPort: 4222
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: message-queue
spec:
  selector:
    matchLabels:
      app: signup
      component: message-queue
  template:
    metadata:
      labels:
        app: signup
        component: message-queue
    spec:
      containers:
      - image: nats:2.1.0
        name: message-queue
        ports:
        - containerPort: 4222
          name: nats
      nodeSelector:
        beta.kubernetes.io/os: linux
