dotnet-developerdays/2019-docker-kubernetes-dotnet-devs/k8s/03-signup/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: signup
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.rule.type: PathPrefix
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: homepage
              servicePort: http
          - path: /app
            backend:
              serviceName: signup-web
              servicePort: http
          - path: /api
            backend:
              serviceName: reference-data-api
              servicePort: http
